# MECore

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
api/: haxelib.json
api/me/: Log.hx  Scene.hx
api/me/asset/: MeshAsset.hx  ShaderAsset.hx
api/me/game/: ComponentManager.hx  GameWorld.hx
api/me/input/: Keyboard.hx
api/me/internal/: Pointer.hx
api/me/math/: Angles.hx  Capsule.hx  Quaternion.hx  Sphere.hx  Transform.hx
api/me/physics/: PhysicsWorld.hx
api/me/scene/: SceneWorld.hx
assets/shaders/: vertex.hlsl
core/: CMakeLists.txt
core/include/MECore/: MECore.h
core/include/MECore/asset/: Asset.h  Shader.h
core/include/MECore/filesystem/: File.h  FileSystem.h  IFileSystem.h  NativeFileSystem.h  RelativeFileSystem.h  RootFileSystem.h
core/include/MECore/fs/: FileSystem.h
core/include/MECore/haxe/: HaxeCommon.h  HaxeEngineObject.h  HaxeGlobals.h  HaxeModule.h  HaxeObject.h  HaxeSystem.h  HaxeType.h
core/include/MECore/input/: InputGlobals.h
core/include/MECore/log/: LogSystem.h
core/include/MECore/math/: Transform.h  Transform.inl  Types.h
core/include/MECore/node/: Node.h  SceneNode.h
core/include/MECore/node/game/: GameNode.h  GameNodeModule.h  GameTransform.h
core/include/MECore/node/render/: DirectionalLightNode.h  LightNode.h  ModelNode.h  RenderCamera.h  RenderNode.h  RenderRootNode.h
core/include/MECore/physics/: Filters.h  Layers.h  PhysicsGlobals.h
core/include/MECore/render/: RenderGlobals.h  RenderInterface.h  RenderTarget.h  RenderTexture.h  RenderWindow.h  Viewport.h  VulkanInterface.h  VulkanWindow.h  Window.h
core/include/MECore/render/pipeline/: ExamplePipeline.h  RenderPass.h  RenderPipeline.h
core/include/MECore/render/vulkan/: VulkanInterface.h  VulkanWindow.h
core/include/MECore/resource/: AnimGraph.h  Material.h  Mesh.h  Model.h  Resource.h  RuntimeShader.h  Shader.h  Texture.h
core/include/MECore/time/: TimeGlobal.h  TimeSystem.h
core/src/: FileSystem.h  MECore.cpp  MECore.h  MEPlatform.h
core/src/asset/: AssetBase.h  Material.cpp  Mesh.cpp  Mesh.h  Shader.cpp  Shader.h
core/src/filesystem/: FileSystem.cpp  NativeFileSystem.cpp  RelativeFileSystem.cpp  RootFileSystem.cpp
core/src/fs/: FileSystem.cpp
core/src/haxe/: HaxeCommon.h  HaxeEngineObject.cpp  HaxeEngineObject.h  HaxeGlobals.cpp  HaxeGlobals.h  HaxeModule.cpp  HaxeObject.cpp  HaxeObject.h  HaxeSystem.cpp  HaxeSystem.h  HaxeType.cpp  HaxeType.h  HaxeUtils.cpp
core/src/imgui/: Renderer.cpp
core/src/input/: InputGlobals.cpp  InputGlobals.h
core/src/job/: JobGlobals.cpp  JobGlobals.h  JobSystem.cpp  JobSystem.h
core/src/log/: LogSystem.cpp  LogSystem.h
core/src/math/: Transform.cpp  Transform.h  Types.h
core/src/node/: Node.h  PhysicsNode.h  RenderNode.h  RenderRootNode.h  SceneNode.cpp  SceneNode.h
core/src/node/game/: GameNode.cpp  GameNode.h  GameNodeModule.cpp  GameNodeModule.h  GameTransform.cpp
core/src/node/render/: DirectionalLightNode.cpp  RenderCamera.cpp  RenderNode.cpp  RenderNode.h  RenderRootNode.cpp  RenderRootNode.h
core/src/physics/: Filters.cpp  Filters.h  JobInterface.cpp  JobInterface.h  Layers.cpp  Layers.h  PhysicsGlobals.cpp  PhysicsGlobals.h
core/src/render/: DefaultMessageCallback.cpp  MainWindow.cpp  RenderGlobals.cpp  RenderGlobals.h  RenderPass.h  RenderTexture.cpp  RenderWindow.cpp  VulkanInterface.cpp  VulkanWindow.cpp  Window.cpp  Window.h
core/src/render/pipeline/: ExamplePipeline.cpp
core/src/render/vulkan/: VulkanInterface.cpp  VulkanWindow.cpp
core/src/resource/: AnimGraph.cpp  AnimGraph.h  Material.cpp  Mesh.cpp  Mesh.h  Model.cpp  Model.h  Shader.cpp  Texture.cpp
core/src/scene/: Scene.cpp  Scene.h  SceneGlobals.cpp  SceneGlobals.h  SceneSystem.cpp  SceneSystem.h
core/src/scene/gameobj/: GameComponentManager.cpp  GameComponentManager.h  GameNode.h  GameObject.cpp  GameObject.h  GameObjectModule.cpp  GameObjectModule.h  GameTransform.cpp  GameTransform.h  GameWorld.cpp  GameWorld.h
core/src/scene/physobj/: PhysicsObject.cpp  PhysicsObject.h  PhysicsWorld.cpp  PhysicsWorld.h
core/src/scene/sceneobj/: SceneCamera.cpp  SceneCamera.h  SceneMesh.h  SceneModel.cpp  SceneModel.h  SceneObject.cpp  SceneObject.h  SceneSkinnedModel.cpp  SceneSkinnedModel.h  SceneTransform.h  SceneWorld.cpp  SceneWorld.h
core/src/time/: TimeGlobal.cpp  TimeGlobal.h  TimeSystem.cpp  TimeSystem.h
extension/: CMakeLists.txt
extension/src/: Global.h  KeyboardBindings.cpp  LogBindings.cpp  MouseBindings.cpp  QuaternionBindings.cpp  SceneMeshBindings.cpp  SceneSystemBindings.cpp  SceneTransformBindings.cpp  TimeBindings.cpp
hapi/: build.hxml  haxelib.json
hapi/me/: Component.hx  ComponentManager.hx  EngineObject.hx  GameObject.hx  GameObjectModule.hx  GameTransform.hx  IValid.hx  Log.hx  Scene.hx  SceneSystem.hx  Time.hx  Update.hx
hapi/me/asset/: Asset.hx  MaterialAsset.hx
hapi/me/bindings/: LogBindings.hx  SceneSystemBindings.hx  SceneTransformBindings.hx  TimeBindings.hx
hapi/me/components/: Camera.hx  MeshRenderer.hx
hapi/me/game/: Component.hx  ComponentManager.hx  GameObject.hx  GameObjectModule.hx  GameTransform.hx  GameWorld.hx
hapi/me/input/: Mouse.hx
hapi/me/internal/: EngineObject.hx  LogInterface.hx  SceneSystemBase.hx  TimeInterface.hx  UUID.hx
hapi/me/math/: AABox.hx  Angles.hx  (+10 more)
hlext/: CMakeLists.txt
hlext/src/: GameTransformBindings.cpp  Global.h  LogInterface.cpp  QuaternionBindings.cpp  SceneTransformBindings.cpp  SceneWorldBindings.cpp  TimeBindings.cpp  TimeInterface.cpp  UUIDBindings.cpp
source/: FileSystem.h  main.cpp
source/math/: Transform.h  Types.h
source/render/: RenderPass.h  RenderPipeline.h  Window.cpp
source/scene/: GameObject.h  SceneSystem.cpp
src/: FileSystem.cpp  main.cpp
src/asset/: AssetBase.h  CombinedMesh.h  Material.cpp  Material.h  Mesh.cpp  Mesh.h  Model.h  Shader.h
src/haxe/: HaxeSystem.cpp  HaxeSystem.h
src/log/: LogHaxeBindings.cpp  LogSystem.cpp  LogSystem.h
src/math/: Transform.h  Types.h
src/render/: MainWindow.h  RenderPipeline.cpp  RenderPipeline.h  SimpleRenderPipeline.cpp  SimpleRenderPipeline.h  Window.h
(+44 files in other folders)
